# WordSenseDisambiguation

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.frontend  README-DOCKER.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_backend.py  run_frontend.py
scripts/: clean_logs.sh
src/backend/: __init__.py  main.py
src/backend/ambiguity/: __init__.py  main.py  ner_utils.py  types.py
src/backend/ambiguity/detector/: __init__.py  detector.py  similarity.py  synset_utils.py
src/backend/ambiguity/recommendations/: __init__.py  recommender.py
src/backend/ambiguity/transformers/: __init__.py  model_manager.py
src/backend/enrichment/: README.md  __init__.py  deepseek_client.py  enrichment.py  format_results.py  main.py  openai_client.py  types.py
src/backend/preprocessing/: __init__.py  main.py  processor_methods.py  service.py  teprolin_processor.py  types.py
src/backend/utils/: __init__.py  config.py  logger.py
src/frontend/: __init__.py  main.py
