[tool.poetry]
name = "wordsensedisambiguation"
version = "1.0.0"
description = "Word Sense Disambiguation with Teprolin"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9.8,<3.13"
fastapi = ">=0.100.0"
uvicorn = ">=0.23.0"
streamlit = ">=1.28.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scikit-learn = ">=1.2.0"
python-dotenv = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"

[tool.poetry.scripts]
# Main scripts
backend = "run_backend:main"
frontend = "run_frontend:main"
teprolin-check = "src.backend.preprocessing.teprolin_processor:check_teprolin_service"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 